--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "swig": "~1.4.1",
         "react": "~0.11.2",
         "socket.io": "~1.3.2",
-        "compression": "~1.0.8"
+        "compression": "~1.0.8",
+        "multer": "*"
     }
 }
