--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react": "~0.12.*",
         "socket.io": "~1.3.2",
         "compression": "~1.0.8",
+        "underscore": "~1.6.*",
         "multer": "*"
     }
 }
