--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "pagedown-extra": "git+https://github.com/jmcmanus/pagedown-extra.git",
     "readline": "*",
     "rimraf": "*",
-    "nodemailer": "0.6.x"
+    "nodemailer": "0.6.x",
+    "mkdirp": "*"
   }
 }
