update edit script

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "readline": "*",
     "rimraf": "*",
     "nodemailer": "0.6.x",
-    "mkdirp": "*"
+    "mkdirp": "*",
+    "typeahead.js": "*"
   }
 }
