common list page added

--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "rimraf": "*",
     "nodemailer": "0.6.x",
     "mkdirp": "*",
-    "typeahead.js": "*"
+    "typeahead.js": "*",
+    "reactlet-common": "*",
+    "reactlet-table": "*",
+    "reactlet-treeview": "*"
   }
 }
