--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "async": "~0.9.0",
     "swig": "~1.4.1",
     "handlebars": "~3.0.1",
-    "react": "~0.12.*",
+    "react": "~0.13.0",
     "socket.io": "~1.3.2",
     "compression": "~1.0.8",
     "pagedown": "git+https://github.com/yayestechlab/pagedown.git",
