--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-react": "*",
     "mocha": "*",
     "mochify": "*",
+    "watchify": "*",
     "react-tools": "*",
     "reactify": "^0.13.1"
   },
