--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "flux": "*",
     "fs-extra": "^0.18.4",
     "glob": "^5.0.10",
+    "googlemaps": "*",
     "handlebars": "~3.0.1",
     "mkdirp": "*",
     "moment": "~2.7.0",
