--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "socket.io": "~1.3.2",
     "swig": "~1.4.1",
     "typeahead.js": "*",
-    "underscore": "~1.6.*"
+    "underscore": "~1.6.*",
+    "d3": "*",
+    "react-d3-components": "*"
   }
 }
