--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "compression": "~1.0.8",
     "consolidate": "~0.10.0",
     "cookie-parser": "~1.0.1",
+    "d3": "*",
     "debug": "~0.7.4",
     "express": "~4.2.0",
     "express-session": "^1.7.6",
@@ -48,6 +49,7 @@
     "pagedown-extra": "git+https://github.com/jmcmanus/pagedown-extra.git",
     "pg": "*",
     "react": "~0.13.0",
+    "react-d3-components": "*",
     "reactlet-common": "*",
     "reactlet-table": "*",
     "reactlet-treeview": "*",
@@ -55,10 +57,9 @@
     "rimraf": "*",
     "serve-favicon": "~2.2.0",
     "socket.io": "~1.3.2",
+    "summernote": "^0.6.16",
     "swig": "~1.4.1",
     "typeahead.js": "*",
-    "underscore": "~1.6.*",
-    "d3": "*",
-    "react-d3-components": "*"
+    "underscore": "~1.6.*"
   }
 }
