update .gitignore to ignore data/*.txt and data/file folder

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ site/npm-debug.log
 .idea
 site/public/file/*
 site/data/site_default
-#site/data/*/*
+site/data/*.txt
+site/data/file
 site/public/script/**/dist/*.js
 site/node_modules/**/dist/
