add reactlet-* components back in package.json - needed for bundle

--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "pg": "*",
     "react": "~0.13.0",
     "react-d3-components": "*",
+    "reactlet-calendar": "*",
+    "reactlet-table": "*",
+    "reactlet-treeview": "*",
     "readline": "*",
     "rimraf": "*",
     "serve-favicon": "~2.2.0",
