--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "glob": "^5.0.10",
     "googlemaps": "*",
     "handlebars": "~3.0.1",
+    "jsoneditor": "^4.2.1",
     "mkdirp": "*",
     "moment": "~2.7.0",
     "mongodb": "~1.4.7",
