--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-d3-components": "*",
     "reactlet-calendar": "*",
     "reactlet-table": "*",
+    "reactlet-table2": "^0.1.1",
     "reactlet-treeview": "*",
     "readline": "*",
     "rimraf": "*",
