--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "mochify": "*",
     "watchify": "*",
     "react-tools": "*",
-    "reactify": "^0.14.0"
+    "reactify": "^0.13.0"
   },
   "browserify": {
     "transform": [
@@ -49,8 +49,8 @@
     "pagedown": "git+https://github.com/yayestechlab/pagedown.git",
     "pagedown-extra": "git+https://github.com/jmcmanus/pagedown-extra.git",
     "pg": "*",
-    "react": "~0.14.0",
-    "react-d3-components": "*",
+    "react": "~0.13.0",
+    "react-d3-components": "~0.5.0",
     "reactlet-calendar": "*",
     "reactlet-table": "*",
     "reactlet-table2": "*",
