--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "rimraf": "*",
     "serve-favicon": "~2.2.0",
     "socket.io": "~1.3.2",
+    "stripe": "^4.0.0",
     "summernote": "^0.6.16",
     "swig": "~1.4.1",
     "typeahead.js": "*",
