shrinkwrap.json added - command: npm shrinkwrap

--- a/package.json
+++ b/package.json
@@ -42,16 +42,15 @@
     "googlemaps": "*",
     "handlebars": "~3.0.1",
     "jsoneditor": "^4.2.1",
-    "mkdirp": "*",
+    "mkdirp": "^0.5.1",
     "moment": "~2.7.0",
     "mongodb": "~1.4.7",
     "morgan": "~1.0.0",
     "multer": "~1.0.0",
     "ncp": "*",
     "nodemailer": "0.6.x",
-    "pagedown": "git+https://github.com/yayestechlab/pagedown.git",
-    "pagedown-extra": "git+https://github.com/jmcmanus/pagedown-extra.git",
     "pg": "*",
+    "plotly": "^1.0.5",
     "quill": "^0.20.0",
     "react": "~0.13.0",
     "react-d3-components": "~0.5.0",
